grid on Portfolio screen working with overflow correction

--- a/src/components/ProjectCard/ProjectCard.css
+++ b/src/components/ProjectCard/ProjectCard.css
@@ -1,14 +1,13 @@
 .overlay-zone{
     position: relative;
 }
-.project_img{
-    width: 100%;    
+.gallery__img {
+    width: 100%;
     height: 100%;
     object-fit: cover;
-    position: relative;
 }
 .overlay{
-    background-color: rgba(0, 0, 0, 0.8);
+    background-color: rgba(94, 94, 94, 0.85);
     height: 100%;
     width: 100%;
     opacity: 0;
@@ -16,6 +15,7 @@
     left: 0;
     position: absolute;
     transition: opacity .5s;
+    overflow: auto;
 }
 .overlay:hover {
     opacity: 1;
@@ -24,22 +24,28 @@
 .card-contents{
     display: flex;
     flex-direction: column;
-    align-items: center;
+    /* align-items: center; */
     text-align: center;
     color: white;
-    margin-top: 30px;
+    margin-top: 12px;
 }
 .card-title{  
     font-family: 'Montserrat', sans-serif;
-    font-size: 3vh;
+    font-size: 2.4vw;
 }
 .card-description{
-    margin-top: 10px;
+    margin-top: 8px;
     padding-left: 10px;
     padding-right: 10px;
     font-family: 'Open Sans', sans-serif;
-    font-size: 2vh;
+    font-size: 1.3vw;
 }
+
+
+
+
+
+
 .fa-gr-icon-container{
     display: flex;
     justify-content: center;
